@@ -3,7 +3,10 @@ use strict;
 use warnings;
 use Exporter 5.57 'import';
 
-our @EXPORT_OK = qw/build_script make_executable split_like_shell/;
+use File::Basename;
+use File::Spec::Functions qw/splitpath splitdir canonpath/;
+
+our @EXPORT_OK = qw/build_script make_executable split_like_shell man1_pagename man3_pagename/;
 
 sub _make_executable {
   # Perl's chmod() is mapped to useful things on various non-Unix
@@ -204,6 +207,28 @@ sub build_script {
 	return $^O eq 'VMS' ? 'Build.com' : 'Build';
 }
 
+sub man1_pagename {
+	my $filename = shift;
+	return basename($filename).".1";
+}
+
+my %separator = (
+	MSWin32 => '.',
+	VMS => '__',
+	os2 => '.',
+	cygwin => '.',
+);
+
+sub man3_pagename {
+	my $filename = shift;
+	my ($vols, $dirs, $file) = splitpath(canonpath($filename));
+	$file = basename($file, qw/.pm .pod/);
+	my @dirs = grep { length } splitdir($dirs);
+	shift @dirs if $dirs[0] eq 'lib';
+	my $separator = $separator{$^O} || '::';
+	return join $separator, @dirs, "$file.3";
+}
+
 # ABSTRACT: Various portability utilities for module builders
 1;
 
@@ -232,3 +257,11 @@ This makes a perl script executable.
 =func split_like_shell($string)
 
 This function splits a string the same way as the local platform does.
+
+=func man1_pagename($filename)
+
+Returns the man page filename for a script.
+
+=func man3_pagename($filename)
+
+Returns the man page filename for a Perl library.
